bug: fix flicker and smoother searching

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -23,6 +23,10 @@
     light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
 }
 
+.highlight {
+  color: var(--highlight-color);
+}
+
 .card__img {
   max-width: 100%;
   border-radius: 8px;
